--- a/module/Admin/view/admin/pedido-venta/solicitud.phtml
+++ b/module/Admin/view/admin/pedido-venta/solicitud.phtml
@@ -116,16 +116,16 @@ if ($this->msg != null) {
                     </div>
                     <?php echo $this->formElement($form->get('btnBuscarCliente')); ?>  
                 </div>
-                <div class="form-group">
+<!--                <div class="form-group">
                     <div class="col-lg-1 col-md-2 col-sm-3">
                         <label for="email1" class="control-label">Documento Pago</label>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-5">
-                        <?php echo $this->formElement($form->get('file-documentoPago')); ?>   
+                        <?php // echo $this->formElement($form->get('file-documentoPago')); ?>   
                         <p class="help-block">Escanee el documento de pago.</p>
                     </div>
 
-                </div>
+                </div>-->
                 <div class="row">
 
                     <div class="col-lg-12">
