--- a/module/Admin/view/admin/pedido-compra/buscar.phtml
+++ b/module/Admin/view/admin/pedido-compra/buscar.phtml
@@ -21,7 +21,7 @@
             <?php echo $this->formElement($form->get('idProveedor'));?>
             <div class="form-group">
                 <div class="col-lg-1 col-md-2 col-sm-3">
-                    <label for="email1" class="control-label">Número Pedído</label>
+                    <label for="email1" class="control-label">Número Pedido</label>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4">
                     <?php echo $this->formInput($form->get('numeroPedido'));?>
