--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -150,8 +150,8 @@ if (defined('RUNNING_FROM_ROOT')) {
                             </a>
                             <ul>
                                 <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/estadopedido">Estado Pedido</a></li>
-                                <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/pedidocompra/solicitud">Solicitud Pedído</a></li>
-                                <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/pedidocompra/autorizar">Autorización Pedído</a></li>
+                                <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/pedidocompra/solicitud">Solicitud Pedido</a></li>
+                                <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/pedidocompra/autorizar">Autorización Pedido</a></li>
                             </ul>
                         </li>
 
